--- a/necchange/app/globals.css
+++ b/necchange/app/globals.css
@@ -6,6 +6,17 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+
+
+  /* FullCalendar */
+  --fc-button-text-color: white;
+  --fc-button-bg-color: black;
+  --fc-button-hover-text-color: black;
+  --fc-button-hover-bg-color: rgb(255, 255, 255);
+  --fc-button-active-bg-color: rgb(255, 255, 255);
+  --fc-button-active-border-color: black;
+  --fc-event-bg-color: #175bb4;
+  --fc-today-bg-color: rgba(18, 61, 253, 0.212);
 }
 
 @media (prefers-color-scheme: dark) {
