--- a/necchange/app/globals.css
+++ b/necchange/app/globals.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 :root {
+  --btn: #070225;
+
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -10,13 +12,14 @@
 
   /* FullCalendar */
   --fc-button-text-color: white;
-  --fc-button-bg-color: black;
+  --fc-button-bg-color: var(--btn);
   --fc-button-hover-text-color: black;
   --fc-button-hover-bg-color: rgb(255, 255, 255);
-  --fc-button-active-bg-color: rgb(255, 255, 255);
+  --fc-button-active-bg-color: var(--btn);
   --fc-button-active-border-color: black;
-  --fc-event-bg-color: #175bb4;
+  --fc-event-bg-color: #404cb9;
   --fc-today-bg-color: rgba(18, 61, 253, 0.212);
+  --outline-color: #1e67c7;
 }
 
 @media (prefers-color-scheme: dark) {
