--- a/necchange/app/components/trades/schedule/calendar.styles.css
+++ b/necchange/app/components/trades/schedule/calendar.styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Oswald:wght@400;500&display=swap');
 
 /* header btn hover */
 .fc .fc-button:hover:not(:disabled):not(:active) {
@@ -16,7 +16,7 @@
 .fc .fc-col-header-cell-cushion {
     padding: 4px;
     font-size: 1.5em;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 /* Header */
@@ -50,13 +50,12 @@
     align-items: center;
 }
 
-
 /* 30min border */
 .fc .fc-timegrid-slot-minor {
     padding: 5px;
     border-top-style: dashed;
     border-bottom: 1px solid;
-    border-color: rgb(123, 131, 250);
+    border-color: rgb(88, 87, 94);
 }
 
 thead {
@@ -70,6 +69,42 @@ thead {
 }
 
 .fc .fc-scroller::-webkit-scrollbar-thumb {
+    display: none;
     background-color: var(--outline-color);
     border-radius: 10px;
+}
+
+.fc .fc-toolbar-title {
+    display: none;
+}
+
+.fc-timegrid-event .fc-event-time {
+    font-size: 1em;
+    font-weight: bold;
+    padding-left: 10px;
+    padding-top: 5px;
+}
+
+.fc-v-event .fc-event-title {
+    padding-left: 10px;
+    font-size: 1.6em;
+    font-family: 'Oswald', sans-serif;
+    font-weight: normal;
+}
+
+.fc .fc-scroller-liquid-absolute {
+    background-color: rgba(255, 255, 255, 0.671);
+}
+
+.fc .fc-view-harness {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.473);
+    border: 1px solid black;
+
+}
+
+.fc-timegrid-event-harness-inset .fc-timegrid-event, .fc-timegrid-event.fc-event-mirror, .fc-timegrid-more-link {
+    border-radius: 0;
+    font-family: 'Oswald', sans-serif;
+    font-weight: normal;
+    box-shadow: 0px 0px 10px rgba(73, 70, 150, 0.507);
 }
