--- a/necchange/app/globals.css
+++ b/necchange/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --btn: #070225;
+  --btn: #2C3E50;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -11,15 +11,18 @@
 
 
   /* FullCalendar */
+  --fc-border-color: black;
   --fc-button-text-color: white;
   --fc-button-bg-color: var(--btn);
   --fc-button-hover-text-color: black;
   --fc-button-hover-bg-color: rgb(255, 255, 255);
   --fc-button-active-bg-color: var(--btn);
   --fc-button-active-border-color: black;
-  --fc-event-bg-color: #404cb9;
-  --fc-today-bg-color: rgba(18, 61, 253, 0.212);
-  --outline-color: #1e67c7;
+  --fc-event-bg-color: #3788d8;
+  --fc-event-text-color: white;
+  --fc-event-border-color: #3788d8;
+  --fc-today-bg-color: rgba(236, 231, 155, 0.432);
+  --outline-color: #0b223a;
 }
 
 @media (prefers-color-scheme: dark) {
