--- a/necchange/app/globals.css
+++ b/necchange/app/globals.css
@@ -11,8 +11,8 @@
 
 
   /* FullCalendar */
-  --fc-border-color: black; 
-
+  --fc-border-color: white; 
+  
   --fc-button-text-color: white;
   --fc-button-bg-color: var(--btn);
   --fc-button-hover-text-color: black;
@@ -22,7 +22,7 @@
   --fc-event-bg-color: #3c7dbe;
   --fc-event-text-color: white;
   --fc-event-border-color: #3788d8;
-/*  --fc-today-bg-color: rgba(255, 251, 198, 0.432); */
+ --fc-today-bg-color: rgba(0, 141, 202, 0.352);
 
   --outline-color: #0b223a;
 }
