--- a/necchange/app/globals.css
+++ b/necchange/app/globals.css
@@ -2,31 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --btn: #2C3E50;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-
-
-  --fc-border-color: white; 
-  
-  --fc-button-text-color: white;
-  --fc-button-bg-color: var(--btn);
-  --fc-button-hover-text-color: black;
-  --fc-button-hover-bg-color: rgb(255, 255, 255);
-  --fc-button-active-bg-color: var(--btn);
-
-  --fc-event-bg-color: #3c7dbe;
-  --fc-event-text-color: white;
-  --fc-event-border-color: #3788d8;
- --fc-today-bg-color: rgba(0, 141, 202, 0.352);
-
-  --outline-color: #0b223a;
-} */
-
 ::-webkit-scrollbar {
   width: 8px; /* Width of the scrollbar */
 }
@@ -44,18 +19,116 @@
   background-color: rgba(248, 248, 248, 0.774); /* Background color of the scrollbar track on hover */
 }
 
-/* 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+
+/***
+  * FullCalendar
+***/
+.full-calendar {
+  --fc-border-color: #e5e7eb;
+  --fc-button-text-color: #111827;
+  --fc-button-bg-color: #f9fafb;
+  --fc-button-border-color: #f3f4f6;
+  --fc-button-hover-bg-color: #f3f4f6;
+  --fc-button-hover-border-color: #e5e7eb;
+  --fc-button-active-bg-color: #3b82f6;
+  --fc-button-active-border-color: #3b82f6;
+  --fc-event-bg-color: #3b82f6;
+  --fc-event-border-color: #3b82f6;
+  --fc-event-text-color: #fff;
+
+
+  .fc .fc-button-primary:not(:disabled).fc-button-active, .fc .fc-button-primary:not(:disabled):active {
+    color: #fff;
+  }
+
+  table.fc-scrollgrid {
+    border-radius: 8px !important;
+    overflow: hidden;
+  }
+
+  tr.fc-scrollgrid-section.fc-scrollgrid-section-body > td {
+    border-bottom-left-radius: 8px !important;
+    border-bottom-right-radius: 8px !important;
+  }
+
+  .fc-col-header-cell-cushion {
+    text-transform: capitalize;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
-} */
+.schedule-container {
+  --fc-today-bg-color: #fff;
+
+  th.fc-col-header-cell.fc-day.fc-day-today {
+    border-bottom: 3px solid #3b82f6;
+  }
+
+  th.fc-col-header-cell.fc-day {
+    border-bottom: 3px solid #e5e7eb;
+  }
+  
+  .fc-direction-ltr .fc-timegrid-col-events {
+    @apply ml-px mr-px;
+  }
+}
+
+.calendar-container {
+  --fc-today-bg-color: #dbeafe;
+
+  .fc .fc-daygrid-day-top {
+    flex-direction: row;
+  }
+
+  .fc .fc-day-other .fc-daygrid-day-top {
+    opacity: 1;
+    color: #4b5563;
+  }
+
+  td.fc-day-other {
+    background-color: #f3f4f6;
+  }
+
+  td.fc-day-today {
+    color: #1d4ed8;
+  }
+}
+
+/***
+  * React CheckBox
+***/
+.react-checkbox-tree>ol {
+  li.rct-node.rct-node-parent>.rct-text {
+    @apply px-2 py-2 border rounded-md font-bold;
+  }
+
+  li.rct-node.rct-node-parent>ol>li.rct-node.rct-node-parent>ol {
+    @apply border-b pb-3;
+  }
+
+  li.rct-node.rct-node-parent>.rct-text {
+    @apply px-2 py-2 border rounded-md font-bold;
+    border-radius: 8px;
+  }
+
+  li.rct-node.rct-node-parent>span>button {
+    @apply text-slate-700 rounded mr-3 bg-white;
+    font-size: 16px;
+  }
+
+  li.rct-node.rct-node-parent:not(:first-child) {
+    @apply mt-5;
+  }
+
+  li.rct-node.rct-node-parent>ol>li.rct-node.rct-node-parent>span>label>span.rct-title {
+    @apply text-sm font-semibold;
+  }
+}
+
+.rct-node>.rct-text,
+.rct-node-parent>.rct-text {
+  @apply py-2;
+}
+
+.rct-node-icon {
+  @apply hidden;
+}
