--- a/necchange/src/app/globals.css
+++ b/necchange/src/app/globals.css
@@ -19,6 +19,10 @@
   background-color: rgba(248, 248, 248, 0.774); /* Background color of the scrollbar track on hover */
 }
 
+/***
+  * Calendar Filters Checkboxes
+***/
+
 
 /***
   * FullCalendar
